# sfactory

./: CMakeLists.txt  README.md
include/: static_factory.hpp
test/: CMakeLists.txt  tests.cpp
